--- a/patient.html
+++ b/patient.html
@@ -1,9 +1,9 @@
 <?php
 // Database configuration
-$servername = "localhost"; 
-$username = "root";        
-$password = "";            
-$dbname = "hospital_management"; 
+$servername = "localhost";
+$username = "root";
+$password = "";
+$dbname = "hospital_management";
 
 // Create a connection
 $conn = new mysqli($servername, $username, $password, $dbname);
@@ -26,7 +26,7 @@ $result = $conn->query($sql);
     <title>Patient Information</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
-        h2 { color: #333; }
+        h2 { color: #333; text-align: center; }
         table { width: 100%; border-collapse: collapse; margin-top: 20px; }
         table, th, td { border: 1px solid #ddd; }
         th, td { padding: 10px; text-align: center; }
@@ -41,9 +41,7 @@ $result = $conn->query($sql);
             color: #fff;
             border-radius: 5px;
         }
-        .back-btn:hover {
-            background: #333;
-        }
+        .back-btn:hover { background: #333; }
     </style>
 </head>
 <body>
@@ -58,6 +56,7 @@ $result = $conn->query($sql);
             <th>Room</th>
             <th>Time</th>
             <th>Deposit</th>
+            <th>Action</th>
         </tr>
         <?php if ($result && $result->num_rows > 0): ?>
             <?php while ($row = $result->fetch_assoc()): ?>
@@ -70,19 +69,14 @@ $result = $conn->query($sql);
                     <td><?php echo $row['room']; ?></td>
                     <td><?php echo $row['time']; ?></td>
                     <td><?php echo $row['deposit']; ?></td>
+                    <td><a href="update_patient.php?id=<?php echo $row['id']; ?>">Update</a></td>
                 </tr>
             <?php endwhile; ?>
         <?php else: ?>
-            <tr>
-                <td colspan="8">No patients found.</td>
-            </tr>
+            <tr><td colspan="9">No patients found.</td></tr>
         <?php endif; ?>
     </table>
-
-    <a href="index.html" class="back-btn">Back</a>
 </body>
 </html>
 
-<?php
-$conn->close(); // Close connection at the end
-?>
+<?php $conn->close(); ?>
